add style payment css

--- a/payment.html
+++ b/payment.html
@@ -72,7 +72,23 @@
                                 <input type="text" placeholder="Ex:  31111 1111 1111 1111">
                             </label>
                         </form>
-
+                        <form class="form-code">
+                            <label for="zipcode">Postal Code
+                                <input id="zipcode" type="text" placeholder="Postal or ZIP code">
+                            </label>
+                            <label for="experit">Expiration
+                                <input id="experit" type="text" placeholder="MM/YY">
+                            </label>
+                            <label for="text">CVV
+                                <input id="text" type="text" placeholder="text">
+                            </label>
+                        </form>
+                        <div class="save-card">
+                            <label for="savecard">Save card
+                                <input id="savecard" type="checkbox">
+                            </label>
+                        </div>
+                        <button class="btn-form-pay" type="submit">Confirm and pay</button>
                     </div>
                     <div class="payment-reserve"></div>
                 </div>
