add payment style

--- a/payment.html
+++ b/payment.html
@@ -84,9 +84,8 @@
                             </label>
                         </form>
                         <div class="save-card">
-                            <label for="savecard">Save card
-                                <input id="savecard" type="checkbox">
-                            </label>
+                            <input id="savecard" type="checkbox">
+                            <label for="savecard">Save card</label>
                         </div>
                         <button class="btn-form-pay" type="submit">Confirm and pay</button>
                     </div>
