add paymant style

--- a/payment.html
+++ b/payment.html
@@ -89,7 +89,30 @@
                         </div>
                         <button class="btn-form-pay" type="submit">Confirm and pay</button>
                     </div>
-                    <div class="payment-reserve"></div>
+                    <div class="payment-reserve">
+                        <div class="price">$149.00<span>/Month</span>
+                        </div>
+                        <div class="plane">
+                            <span>Basic Plan</span>
+                            <p>It’s a long estabilished fact that a reader will be distracted by the readable content</p>
+                        </div>
+                        <div class="includ">
+                            <span>What’s Includes:</span>
+                            <ul>
+                                <li>8 classes per month</li>
+                                <li>All in basic package</li>
+                                <li>1-on-1 personal trainning</li>
+                            </ul>
+                        </div>
+                        <div class="package">
+                            <span>Package Duration</span>
+                            <section>
+                                <option value="1 month">1 month</option>
+                                <option value="2 month">2 month</option>
+                                <option value="3 month">3 month</option>
+                            </section>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
