add paymant selected

--- a/payment.html
+++ b/payment.html
@@ -106,11 +106,11 @@
                         </div>
                         <div class="package">
                             <span>Package Duration</span>
-                            <section>
+                            <select class="js-example-basic-single">
                                 <option value="1 month">1 month</option>
                                 <option value="2 month">2 month</option>
                                 <option value="3 month">3 month</option>
-                            </section>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -230,6 +230,7 @@
 
     <script src="js/jquery-3.6.4.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
