add contact page

--- a/mambership.html
+++ b/mambership.html
@@ -27,7 +27,7 @@
                             <a href="program.html" class="link">Programs</a>
                         </li>
                         <li class="item">
-                            <a href="" class="link">Contact</a>
+                            <a href="contact.html" class="link">Contact</a>
                         </li>
                         <li class="item">
                             <a href="payment.html" class="link">Payment</a>
