--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <title>Contact</title>
 
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
-
     <header class="header ">
         <div class="header-fixed">
             <div class="container header-wrapper">
@@ -30,7 +31,7 @@
                             <a href="mambership.html" class="link">Membership</a>
                         </li>
                         <li class="item">
-                            <a href="contact.html" class="link">Contact</a>
+                            <a href="payment.html" class="link">Payment</a>
                         </li>
                         
                     </ul>
@@ -48,76 +49,33 @@
 
     </header>
 
-    <main>
+    <!-- end hero -->
 
-        <section class="payment">
+    <main>
+        <section class="contact">
             <div class="container">
-                <div class="payment-wrapper">
-                    <div class="payment-content">
-                        <h2 class="payment-title">Get your package</h2>
-                        <div class="payment-metotd">
-                            <span class="payment-metotd-title">Pay with</span>
-                            <label for="paypal">
-                                <input type="radio" name="metotd" id="paypal">
-                                <span></span>
-                            </label>
-                            <label for="pay">
-                                <input type="radio" name="metotd" id="pay">
-                                <span></span>
-                            </label>
-                        </div>
-                        <span class="other-title">Or  using a credit card</span>
-                        <form class="payment-form">
-                            <label for="">Cardholder Name
-                                <input type="text">
-                            </label>
-                            <label for="">Card Number
-                                <input type="text" placeholder="Ex:  31111 1111 1111 1111">
-                            </label>
-                        </form>
-                        <form class="form-code">
-                            <label for="zipcode">Postal Code
-                                <input id="zipcode" type="text" placeholder="Postal or ZIP code">
-                            </label>
-                            <label for="experit">Expiration
-                                <input id="experit" type="text" placeholder="MM/YY">
-                            </label>
-                            <label for="text">CVV
-                                <input id="text" type="text" placeholder="text">
-                            </label>
-                        </form>
-                        <div class="save-card">
-                            <input id="savecard" type="checkbox">
-                            <label for="savecard">Save card</label>
-                        </div>
-                        <button class="btn-form-pay" type="submit">Confirm and pay</button>
-                    </div>
-                    <div class="payment-reserve">
-                        <div class="price">$149.00<span>/Month</span>
-                        </div>
-                        <div class="plane">
-                            <span>Basic Plan</span>
-                            <p>It’s a long estabilished fact that a reader will be distracted by the readable content</p>
-                        </div>
-                        <div class="includ">
-                            <span>What’s Includes:</span>
-                            <ul>
-                                <li>8 classes per month</li>
-                                <li>All in basic package</li>
-                                <li>1-on-1 personal trainning</li>
-                            </ul>
-                        </div>
-                        <div class="package">
-                            <span>Package Duration</span>
-                            <select class="js-example-basic-single">
-                                <option value="1 month">1 month</option>
-                                <option value="2 month">2 month</option>
-                                <option value="3 month">3 month</option>
-                            </select>
-                        </div>
+                <h1 class="contact-title">Let's get<span> in touch!</span></h1>
+                <p class="contact-text">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada.</p>
+                <div class="contact-wrapper">
+                    <form action="" class="contact-form">
+                        <label>Full Name<input type="text" placeholder="What’s your Name?"></label>
+                        <label>Email<input type="email" placeholder="What’s your Email?"></label>
+                        <label>Phone<input type="phone" placeholder="What’s your Phone?"></label>
+                        <label>Input Title<textarea class="message" placeholder="Write your message..."></textarea></label>
+                        <button class="btn-contact">Send Message</button>
+                    </form>
+                    <div class="contact-reserve">
+                            <span>Contact Details</span>
+                            <p>Fill up the form and our team will get back to you with in 24 hours.</p>
+                            <div class="contact-details">
+                                <ul>
+                                    <li class="phone">+1 432 1234 234</li>
+                                    <li class="email">hello@nguli.com</li>
+                                    <li class="location">105 Street, Seatle-US</li>
+                                </ul>
+                            </div>
                     </div>
                 </div>
-                
             </div>
         </section>
 
@@ -231,11 +189,14 @@
     </div>
 
 
+
+
     <script src="js/jquery-3.6.4.min.js"></script>
     <script src="js/slick.min.js"></script>
-    <script src="js/select2.min.js"></script>
     <script src="js/main.js"></script>
 
+
 </body>
+
 
 </html>
