--- a/trainers.html
+++ b/trainers.html
@@ -27,7 +27,7 @@
                             <a href="mambership.html" class="link">Membership</a>
                         </li>
                         <li class="item">
-                            <a href="" class="link">Contact</a>
+                            <a href="contact.html" class="link">Contact</a>
                         </li>
                         <li class="item">
                             <a href="payment.html" class="link">Payment</a>
