add aboutus page

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <title>Fitnes</title>
+    <title>About us</title>
 
     <link rel="stylesheet" href="css/main.min.css">
 </head>
@@ -19,6 +19,9 @@
                     <a href="" class="logo"><img src="img/Logo.png" alt="logo"></a>
                     <nav class="nav">
                         <ul class="menu">
+                            <li class="item">
+                                <a href="index.html" class="link">home</a>
+                            </li>
                             <li class="item">
                                 <a href="program.html" class="link">Programs</a>
                             </li>
@@ -50,61 +53,7 @@
         </header>
 
         <div class="container">
-            <div class="hero-midle">
-                <div class="hero-content">
-                    <h1 class="hero-title">For Your <span>Health</span> and <span>Fitness Goals</span> in No Time</h1>
-                    <p class="hero-text">It doesn’t matter if your goal is to get stronger, burn fat, or to just stay
-                        fit
-                        our world class coaches will guide you every step of the way.</p>
-                    <a href="" class="hero-link">Book a Class</a>
-                    <span class="hero-sapport">Supported by:</span>
-                    <div class="hero-brand">
-                        <img src="img/nike.svg" alt="nike">
-                        <img src="img/esprit.svg" alt="esprit">
-                        <img src="img/apple-watch.svg" alt="apple-watch">
-                        <img src="img/balance.svg" alt="balance">
-                    </div>
-                </div>
-                <div class="hero-indicate">
-                    <div class="heart-rate">
-                        <span class="heart-rate-title">Muscle Rate</span>
-                        <span class="heart-rate-number">2.861</span>
-                    </div>
-                    <div class="heart-rate">
-                        <span class="heart-rate-title">Heart Rate</span>
-                        <span class="heart-rate-number">9281 bpm</span>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-
-        <div class="hero-bottom container">
-            <div class="hero-programs">
-                <div class="program-block training">
-                    <span class="program-title">Personal Training</span>
-                    <p class="program-text">It’s a long estabilished fact that a reader will be distracted by the
-                        readable content</p>
-                    <a href="" class="program-link">Learn More</a>
-                </div>
-                <div class="program-block programs active">
-                    <span class="program-title">Workout Programs</span>
-                    <p class="program-text">It’s a long estabilished fact that a reader will be distracted by the
-                        readable content</p>
-                    <a href="" class="program-link">Learn More</a>
-                </div>
-                <div class="program-block diet">
-                    <span class="program-title">Program & Diet</span>
-                    <p class="program-text">It’s a long estabilished fact that a reader will be distracted by the
-                        readable content</p>
-                    <a href="" class="program-link">Learn More</a>
-                </div>
-            </div>
-            <div class="hero-descript">
-                <span class="hero-descript-title">Training Program For You</span>
-                <p class="hero-descript-text">Starting a fitness routine can be intimidating, but it helps to have an
-                    idea of whar to expect before joining any class.</p>
-            </div>
         </div>
 
     </section>
@@ -113,83 +62,33 @@
 
     <main>
 
-        <section class="propose">
-            <h2 class="propose-title">We offer something for everybody</h2>
+        <section class="corework">
+            <h2 class="corework-title">My Core Work Values</h2>
+            <p class="corework-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar enim volutpat tellus.</p>
             <div class="container">
-                <div class="propose-block">
-                    <div class="propose-content">
-                        <span class="title arm">Crush any strength program with our suite of strength equipment</span>
-                        <ul class="list">
-                            <li class="item">Fully fitted powerlifting and strongman section</li>
-                            <li class="item">Olympic lifting platforms, weights, and bars</li>
-                            <li class="item">Dumbells ranging 5lbs-250lbs</li>
-                        </ul>
-                        <a href="" class="link">Join Now</a>
+                <div class="commitment-block">
+                    <div class="commitment-content">
+                        <span class="title arm">Commitment</span>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
                     </div>
-                    <figure class="propose-img"><img src="img/Image-1.jpg" alt="Image-1"></figure>
+                    <figure class="commitment-img"><img src="img/commitment.jpg" alt=""></figure>
                 </div>
-                <div class="propose-block">
-                    <div class="propose-content">
-                        <span class="title heart">Be guided every step of the way with one of our world class
-                            coaches</span>
-                        <ul class="list">
-                            <li class="item">Weightloss</li>
-                            <li class="item">Competitive CrossFit</li>
-                            <li class="item">Powerlifting</li>
-                        </ul>
-                        <a href="" class="link">Join Now</a>
+                <div class="motivation-block">
+                    <div class="commitment-content motivation">
+                        <span class="title heart">Motivation</span>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
                     </div>
-                    <figure class="propose-img"><img src="img/Image-2.jpg" alt="Image-2"></figure>
+                    <figure class="motivation-img"><img src="img/motivation.jpg" alt=""></figure>
+                </div>
+                <div class=" passion-block">
+                    <div class="commitment-content">
+                        <span class="title star">Passion</span>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                    </div>
+                    <figure class="passion-img"><img src="img/passion.jpg" alt=""></figure>
                 </div>
             </div>
         </section>
-
-        <!-- end propose -->
-
-        <section class="price">
-            <span class="inner-subtitle">Membership</span>
-            <h2 class="inner-title">Crushing your health and fitness goals starts here...</h2>
-            <div class="price-wrapper container">
-                <div class="price-block">
-                    <div class="type-plane">
-                        <span class="type-price">$0<small>/Month</small></span>
-                        <span class="type-name">Free Plan</span>
-                    </div>
-                    <ul class="list">
-                        <li class="item">1 classes per month</li>
-                        <li class="item">Access to online classes</li>
-                        <li class="item">10 health & fitness guides</li>
-                    </ul>
-                    <a href="" class="price-link">Puchase Plan</a>
-                </div>
-                <div class="price-block active">
-                    <div class="type-plane">
-                        <span class="type-price">$149.00<small>/Month</small></span>
-                        <span class="type-name">Basic Plan</span>
-                    </div>
-                    <ul class="list">
-                        <li class="item">8 classes per month</li>
-                        <li class="item">All in basic package</li>
-                        <li class="item">1-on-1 personal trainning</li>
-                    </ul>
-                    <a href="" class="price-link">Puchase Plan</a>
-                </div>
-                <div class="price-block">
-                    <div class="type-plane">
-                        <span class="type-price">$289.00<small>/Month</small></span>
-                        <span class="type-name">Professional Plan</span>
-                    </div>
-                    <ul class="list">
-                        <li class="item">20 classes per month</li>
-                        <li class="item">All in Intermediate package</li>
-                        <li class="item">Access to my online tutorials</li>
-                    </ul>
-                    <a href="" class="price-link">Puchase Plan</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- end price -->
 
         <section class="review">
             <span class="inner-subtitle">review</span>
@@ -244,21 +143,6 @@
         </section>
 
         <!-- end rewie -->
-
-        <div class="started">
-            <div class="container started-wrapper">
-                <div class="started-content">
-                    <h2 class="started-title">Discover Your Potential</h2>
-                    <p class="started-text">Workout was started by James and Mount in 2012. It’s our mission to help
-                        people in Denver get fit, stay healthy, and live life on their terms without fitness being an
-                        obstacle.</p>
-                </div>
-                <a href="" class="started-link">Get Started</a>
-            </div>
-        </div>
-
-        <!-- end started -->
-
     </main>
 
     <footer class="footer">
@@ -285,7 +169,7 @@
                         <a href="" class="footer-link">Blog</a>
                     </li>
                     <li class="footer-item">
-                        <a href="" class="footer-link">Contact</a>
+                        <a href="contact.html" class="footer-link">Contact</a>
                     </li>
                     <li class="footer-item">
                         <a href="aboutus.html" class="footer-link">About Us</a>
