--- a/program.html
+++ b/program.html
@@ -196,22 +196,22 @@
                 </div>
                 <ul class="footer-list">
                     <li class="footer-item">
-                        <a href="" class="footer-link">Home</a>
+                        <a href="index.html" class="footer-link">Home</a>
                     </li>
                     <li class="footer-item">
-                        <a href="" class="footer-link">Programs</a>
+                        <a href="program.html" class="footer-link">Programs</a>
                     </li>
                     <li class="footer-item">
-                        <a href="" class="footer-link">Membership</a>
+                        <a href="mambership.html" class="footer-link">Membership</a>
                     </li>
                     <li class="footer-item">
                         <a href="" class="footer-link">Blog</a>
                     </li>
                     <li class="footer-item">
-                        <a href="" class="footer-link">Contact</a>
+                        <a href="contact.html" class="footer-link">Contact</a>
                     </li>
                     <li class="footer-item">
-                        <a href="" class="footer-link">About Us</a>
+                        <a href="aboutus.html" class="footer-link">About Us</a>
                     </li>
                 </ul>
                 <form action="" class="footer-form">
