add aboutus styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="hero">
+    <section class="home">
         <header class="header ">
             <div class="header-fixed">
                 <div class="container header-wrapper">
@@ -52,9 +52,30 @@
 
         </header>
 
-        <div class="container">
 
+        <div class="container">
+            <a class="aboutus-btn">About Me</a>
+            <div class="aboutus-wrapper">
+                <div class="aboutus-left">
+                    <h1 class="aboutus-title">Hi, I'm <span>Adison,</span> your <span>personal trainner</span></h1>
+                </div>
+                <div class="aboutus-right">
+                    <span>What's my story?</span>
+                    <p>Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar enim volutpat tellus. Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                </div>
+            </div>
+            <div class="hero-indicate">
+                <div class="heart-rate">
+                    <span class="heart-rate-number">1.400+</span>
+                    <span class="heart-rate-title">Classes taught</span>
+                </div>
+                <div class="heart-rate">
+                    <span class="heart-rate-number">120+</span>
+                    <span class="heart-rate-title">Years of experience</span>
+                </div>
+            </div>
         </div>
+
 
     </section>
 
@@ -64,26 +85,30 @@
 
         <section class="corework">
             <h2 class="corework-title">My Core Work Values</h2>
-            <p class="corework-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar enim volutpat tellus.</p>
+            <p class="corework-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar
+                enim volutpat tellus.</p>
             <div class="container">
                 <div class="commitment-block">
                     <div class="commitment-content">
                         <span class="title arm">Commitment</span>
-                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna
+                            imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
                     </div>
                     <figure class="commitment-img"><img src="img/commitment.jpg" alt=""></figure>
                 </div>
                 <div class="motivation-block">
                     <div class="commitment-content motivation">
                         <span class="title heart">Motivation</span>
-                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna
+                            imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
                     </div>
                     <figure class="motivation-img"><img src="img/motivation.jpg" alt=""></figure>
                 </div>
                 <div class=" passion-block">
                     <div class="commitment-content">
                         <span class="title star">Passion</span>
-                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                        <p class="coretext">Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna
+                            imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
                     </div>
                     <figure class="passion-img"><img src="img/passion.jpg" alt=""></figure>
                 </div>
