add aboutus styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,45 +12,46 @@
 </head>
 
 <body>
-    <section class="home">
-        <header class="header ">
-            <div class="header-fixed">
-                <div class="container header-wrapper">
-                    <a href="" class="logo"><img src="img/Logo.png" alt="logo"></a>
-                    <nav class="nav">
-                        <ul class="menu">
-                            <li class="item">
-                                <a href="index.html" class="link">home</a>
-                            </li>
-                            <li class="item">
-                                <a href="program.html" class="link">Programs</a>
-                            </li>
-                            <li class="item">
-                                <a href="trainers.html" class="link">Trainers</a>
-                            </li>
-                            <li class="item">
-                                <a href="mambership.html" class="link">Membership</a>
-                            </li>
-                            <li class="item">
-                                <a href="contact.html" class="link">Contact</a>
-                            </li>
-                            <li class="item">
-                                <a href="payment.html" class="link">Payment</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="header-block">
-                        <button class="btn btn-cart"></button>
-                        <div class="header-acount">
-                            <a href="" class="acount-link login">Log In</a>
-                            <a href="" class="acount-link active Sign-Up">Sign Up</a>
-                        </div>
+    <header class="header ">
+        <div class="header-fixed">
+            <div class="container header-wrapper">
+                <a href="" class="logo"><img src="img/Logo.png" alt="logo"></a>
+                <nav class="nav">
+                    <ul class="menu">
+                        <li class="item">
+                            <a href="index.html" class="link">home</a>
+                        </li>
+                        <li class="item">
+                            <a href="program.html" class="link">Programs</a>
+                        </li>
+                        <li class="item">
+                            <a href="trainers.html" class="link">Trainers</a>
+                        </li>
+                        <li class="item">
+                            <a href="mambership.html" class="link">Membership</a>
+                        </li>
+                        <li class="item">
+                            <a href="contact.html" class="link">Contact</a>
+                        </li>
+                        <li class="item">
+                            <a href="payment.html" class="link">Payment</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header-block">
+                    <button class="btn btn-cart"></button>
+                    <div class="header-acount">
+                        <a href="" class="acount-link login">Log In</a>
+                        <a href="" class="acount-link active Sign-Up">Sign Up</a>
                     </div>
-                    <div class="burger"></div>
                 </div>
+                <div class="burger"></div>
             </div>
+        </div>
 
-        </header>
+    </header>
+
+    <section class="aboutus">
 
 
         <div class="container">
@@ -73,9 +74,9 @@
 
     <main>
 
-        <section class="corework">
-            <h2 class="corework-title">My Core Work Values</h2>
-            <p class="corework-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar
+        <section class="aboutus-content">
+            <h2 class="aboutus-content-title">My Core Work Values</h2>
+            <p class="aboutus-content-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar
                 enim volutpat tellus.</p>
             <div class="container">
                 <div class="commitment-block">
