add aboutus styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -66,7 +66,14 @@
                 </div>
             </div>
         </div>
-
+    <div class="expiriences">
+        <span class="title-number">1.400+</span>
+        <span class="expiriences-text">Classes taught</span>
+    </div>
+    <div class="expiriences expiriences-list">
+        <span class="title-number">1.400+</span>
+        <span class="expiriences-text">Classes taught</span>
+    </div>
 
     </section>
 
