add aboutus styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -71,8 +71,8 @@
         <span class="expiriences-text">Classes taught</span>
     </div>
     <div class="expiriences expiriences-list">
-        <span class="title-number">1.400+</span>
-        <span class="expiriences-text">Classes taught</span>
+        <span class="title-number">120+</span>
+        <span class="expiriences-text">Years of experience</span>
     </div>
 
     </section>
