--- a/aboutus.html
+++ b/aboutus.html
@@ -55,25 +55,32 @@
 
 
         <div class="container">
-            <a class="aboutus-btn">About Me</a>
             <div class="aboutus-wrapper">
                 <div class="aboutus-left">
+                    <span class="aboutus-btn">About Me</span>
+
                     <h1 class="aboutus-title">Hi, I'm <span>Adison,</span> your <span>personal trainner</span></h1>
                 </div>
                 <div class="aboutus-right">
                     <span>What's my story?</span>
-                    <p>Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar enim volutpat tellus. Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet non malesuada. Inol massa id tellus natoque augue in et.</p>
+                    <p>Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar enim volutpat
+                        tellus. Cras tellus ac dui at sed. Suspendisse feugiat scelerisque et, viverra urna imperdiet
+                        non malesuada. Inol massa id tellus natoque augue in et.</p>
                 </div>
             </div>
+            <div class="aboutus-img">
+                <img src="img/man2.png" alt="man2">
+                <div class="expiriences">
+                    <span class="title-number">1.400+</span>
+                    <span class="expiriences-text">Classes taught</span>
+                </div>
+                <div class="expiriences expiriences-list">
+                    <span class="title-number">120+</span>
+                    <span class="expiriences-text">Years of experience</span>
+                </div>
+
+            </div>
         </div>
-    <div class="expiriences">
-        <span class="title-number">1.400+</span>
-        <span class="expiriences-text">Classes taught</span>
-    </div>
-    <div class="expiriences expiriences-list">
-        <span class="title-number">120+</span>
-        <span class="expiriences-text">Years of experience</span>
-    </div>
 
     </section>
 
@@ -83,7 +90,8 @@
 
         <section class="aboutus-content">
             <h2 class="aboutus-content-title">My Core Work Values</h2>
-            <p class="aboutus-content-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id pulvinar
+            <p class="aboutus-content-text">Consectetur adipiscing elit. Odio amet egestasolm dignissim eu nunc. Id
+                pulvinar
                 enim volutpat tellus.</p>
             <div class="container">
                 <div class="commitment-block">
